inference.py 수정

--- a/'data.txt'만들기.ipynb
+++ b/'data.txt'만들기.ipynb
@@ -64,12 +64,12 @@
    "source": [
     "texts = []\n",
     "for _ in range(0,500):\n",
-    "    texts.append(f'친구랑 마실만한 /종류;{random.choice(종류)}/ 와인 추천해줘.\\n')\n",
+    "    texts.append(f'/종류;{random.choice(종류)}/ 와인 추천해줘.\\n')\n",
     "    texts.append(f'/당도;{random.choice(당도)}/ 분위기 좋은 와인 추천해줘!\\n')\n",
     "    texts.append(f'와인 처음 먹어보는데 /바디감;{random.choice(바디감)}/ 느낌있는 걸로 추천 해줄래?\\n')\n",
-    "    texts.append(f'저녁에 마실 /산미;{random.choice(산미)}/ 친구랑 마실 와인이 있을까?\\n')\n",
+    "    texts.append(f'저녁에 마실 /산미;{random.choice(산미)}/ 와인이 있을까?\\n')\n",
     "    texts.append(f'파티할 때 마실 /금액;{random.choice(금액)}/ 와인 좀 추천해줘.\\n')\n",
-    "    texts.append(f'친구들과 마실 /당도;{random.choice(당도)}/ 와인 추천해줘 종류는 /종류;{random.choice(종류)}/ \\n')\n",
+    "    texts.append(f'/당도;{random.choice(당도)}/ 와인 추천해줘 종류는 /종류;{random.choice(종류)}/ \\n')\n",
     "    texts.append(f'/종류;{random.choice(종류)}/ 와인 중에 /바디감;{random.choice(바디감)}/ 와인 있어?\\n')\n",
     "    texts.append(f'/산미;{random.choice(산미)}/ /종류;{random.choice(종류)}/ 와인 있을까?\\n')\n",
     "    texts.append(f'친구들이랑 마실건데 /금액;{random.choice(금액)}/ /종류;{random.choice(종류)}/ 와인 추천.\\n')\n",
@@ -86,7 +86,7 @@
     "    texts.append(f'/당도;{random.choice(당도)}/ /금액;{random.choice(금액)}/ 의 와인 추천해줘 \\n')\n",
     "    texts.append(f'/바디감;{random.choice(바디감)}/ 느낌을 주는 /산미;{random.choice(산미)}/ 맛이 괜찮은 와인 추천해줘 \\n')\n",
     "    texts.append(f'기분을 달래줄 /바디감;{random.choice(바디감)}/ 느낌의 /금액;{random.choice(금액)}/ 와인 추천해줘 \\n')\n",
-    "    texts.append(f'친구들이랑 마실건데 /금액;{random.choice(금액)}/ /종류;{random.choice(종류)}/ 와인 추천\\n')\n",
+    "    texts.append(f'/금액;{random.choice(금액)}/ /종류;{random.choice(종류)}/ 와인 추천\\n')\n",
     "    texts.append(f'/종류;{random.choice(종류)}/ 에 /바디감;{random.choice(바디감)}/ 느낌을 주는 /당도;{random.choice(당도)}/ 맛의 와인!!! \\n')\n",
     "    texts.append(f'선물로 구매할 /당도;{random.choice(당도)}/ 와인 중에  /산미;{random.choice(산미)}/ 맛의 /종류;{random.choice(종류)}/ 와인 보여줘!\\n')\n",
     "    texts.append(f'/금액;{random.choice(금액)}/ /당도;{random.choice(당도)}/ 맛 좀 내는 /종류;{random.choice(종류)}/ 와인\\n')\n",
